--- a/ovoslam/index.html
+++ b/ovoslam/index.html
@@ -225,13 +225,18 @@
         <h2 class="title is-3">System</h2>
 
         <!--Pipeline -->
+        <div class="content has-text-centered">
+          <img src="./static/images/ovoslam.png" alt="OVO-SLAM pipeline" />
+        </div>
         <div class="content has-text-justified">
           <p>
             Given an input RGB-D video, a visual SLAM pipeline selects a set of keyframes and estimates their poses and a 3D point cloud representing the scene. From the 3D representation, our OVO-SLAM mapping module extracts and tracks 3D segments and assigns per-3D-segment CLIP vectors aggregated from those extracted in the keyframes.
+
+            OVO-SLAM outperforms state-of-the-art Open-Vocabulary 3D segmentation baselines, despite being the only one that can both run online and without groud-truth camera poses.
           </p>
         </div>
         <div class="content has-text-centered">
-          <img src="./static/images/ovoslam.png" alt="OVO-SLAM pipeline" />
+          <img src="./static/images/table_2.png" alt="Table 2 from paper" />
         </div>
         <!--/ Pipeline -->
 
@@ -255,23 +260,24 @@
           <p>
             To generate descriptors for 2D segments, we combine three CLIP descriptors for each 2D mask: one for the full image, one for the segment with the background removed, and one for the minimum bounding box containing the full 2D mask.
           </p>
+
+          <p>
+                Then, a pre-trained neural network predicts a weight for each dimension of each descriptor, and finally these descriptors are merged together using a weighted-average sum.
+          </p>
         </div>
       </div>
 
       <div class="column">
         <div class="columns is-centered">
           <div class="column content">
-            <p>
-                Then, a pre-trained neural network predicts a weight for each dimension of each descriptor, and finally these descriptors are merged together using a weighted-average sum.
-            </p>
             <img src="./static/images/clips_merger.png" alt="Matting example">
           </div>
-
         </div>
       </div>
     </div>
     <!--/ CLIPs merging. -->
 
+    </div>
   </div>
 </section>
 
