--- a/ovo/index.html
+++ b/ovo/index.html
@@ -85,7 +85,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="./static/pdf/ovo_v2.0.pdf"
+                <a href="./static/pdf/ovo_final.pdf"
                    class="internal-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
