Updated Featsplat web links

--- a/ovo/index.html
+++ b/ovo/index.html
@@ -49,7 +49,7 @@
           More Research
         </a>
         <div class="navbar-dropdown">
-          <a class="navbar-item" href="https://tberriel.github.io/projects/FeatSplat/">
+          <a class="navbar-item" href="https://tberriel.github.io/FeatSplat/">
             FeatSplat
           </a>
         </div>
