Fixed FeatSplat gifs

--- a/featsplat/index.html
+++ b/featsplat/index.html
@@ -140,10 +140,8 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <video id="teaser" autoplay muted loop playsinline height="100%">
-        <source src="../assets/img/publication_preview/featsplat.jpg"
-                type="image/jpg">
-      </video>
+
+      <img src="../assets/img/publication_preview/featsplat.jpg" alt="System pipeline" />
       <h2 class="subtitle has-text-centered">
         Novel view synthesis of a trajectory on the scene 03f7a0e617 from ScanNet++ dataset<d-cite key="yeshwanthliu2023scannetpp"></d-cite>. Left 3D Gaussian Splatting<d-cite key="kerbl20233d"></d-cite>, right FeatSplat32.
       </h2>
@@ -176,27 +174,16 @@
     </div>
       <div id="results-carousel" class="carousel results-carousel is-dark">
         <div class="item item-gif-pe">
-          <video poster="" id="gif-pe" autoplay controls muted loop playsinline height="100%">
-            <source src="../assets/gifs/path_2_pe.gif"
-                    type="gif">
-          </video>
+          <img src="../assets/gifs/path_2_pe.gif" />
+        </div>
         <div class="item item-gif-x">
-          <video poster="" id="gif-x" autoplay controls muted loop playsinline height="100%">
-            <source src="../assets/gifs/path_2_x.gif"
-                    type="gif">
-          </video>
+          <img src="../assets/gifs/path_2_x.gif" />
         </div>
         <div class="item item-gif-y">
-          <video poster="" id="gif-y" autoplay controls muted loop playsinline height="100%">
-            <source src="../assets/gifs/path_2_y.gif"
-                    type="gif">
-          </video>
+          <img src="../assets/gifs/path_2_y.gif" />
         </div>
         <div class="item item-gif-z">
-          <video poster="" id="gif-z" autoplay controls muted loop playsinline height="100%">
-            <source src="../assets/gifs/path_2_z.gif"
-                    type="gif">
-          </video>
+          <img src="../assets/gifs/path_2_z.gif" />
         </div>
       </div>
     </div>
